--- a/app/global.css
+++ b/app/global.css
@@ -33,6 +33,10 @@ html {
     min-width: 360px;
 }
 
+body {
+    background-color: black;
+}
+
 .prose .anchor {
     @apply absolute invisible no-underline;
 
